# finch

./: .bumpversion.toml  .codacy.yml  .condarc  .cruft.json  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  .readthedocs.yml  .travis.yml  .yamllint.yaml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.rst  buildout.cfg  conftest.py  custom.cfg.example  docker-compose.yml  environment-dev.yml  environment-docs.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_prod.txt  setup.cfg  setup.py  travis-ci-local.sh  update_from_cc.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-accept-ci-changes.yml  bump-version-tag.yml  bump-version.yml  codeql.yml  docker-testing.yml  label.yml  main.yml  publish-pypi.yml  tag-on-release.yml  tag-testpypi.yml
CI/: requirements.txt  requirements_ci.in  requirements_ci.txt
docs/: Makefile
docs/source/: .gitignore  conf.py  configuration.rst  deploying.rst  dev_guide.rst  index.rst  installation.rst  processes.rst
docs/source/notebooks/: basic.ipynb  bccaqv2.ipynb  dap_subset.ipynb  finch-usage.ipynb  index.rst  regional_average.ipynb  subset.ipynb
docs/source/processes/: ensemble.rst  indicators.rst  other.rst
etc/: debug.cfg  sample-custom.cfg
finch/: __init__.py  __version__.py  cli.py  datasets.yml  default.cfg  wsgi.py
finch/processes/: __init__.py  base.py  bccaqv2.py  constants.py  ensemble_utils.py  subset.py  utils.py  utils_bccaqv2.py  virtual.py  wps_base.py  wps_bccaqv2_gridpoint_indices.py  wps_bccaqv2_heatwave.py  wps_ensemble_bbox_indices.py  wps_ensemble_gridpoint_indices.py  wps_ensemble_indices_bbox.py  wps_ensemble_indices_point.py  wps_ensemble_indices_polygon.py  wps_geoseries_to_netcdf.py  wps_hourly_to_daily.py  wps_inout.py  wps_sdba.py  wps_subset_polygon.py  wps_subsetpoly.py  wps_wordcounter.py  wps_xaverage_polygon.py  wps_xclim_indices.py  wps_xsubset_bbox.py  wps_xsubset_bbox_dataset.py  wps_xsubset_bccaqv2.py  wps_xsubset_point.py  wps_xsubset_point_dataset.py  wps_xsubset_polygon.py  wps_xsubsetbbox.py  wps_xsubsetbbox_bccaqv2.py  wps_xsubsetbbox_dataset.py  wps_xsubsetpoint.py  wps_xsubsetpoint_bccaqv2.py  wps_xsubsetpoint_dataset.py  wpsio.py
finch/processes/modules/: humidex.yml  streamflow.yml
finch/templates/: pywps.cfg
finch/tests/: __init__.py  common.py  test_wps_caps.py  test_wps_inout.py  test_wps_wordcounter.py  test_wps_xclim_indices.py
src/finch/: __init__.py  __version__.py  cli.py  default.cfg  wsgi.py
src/finch/processes/: ensemble_utils.py  subset.py  utils.py  virtual.py  wps_base.py  wps_ensemble_indices_bbox.py  wps_ensemble_indices_point.py  wps_ensemble_indices_polygon.py  wps_geoseries_to_netcdf.py  wps_sdba.py  wps_xclim_indices.py  wps_xsubset_bbox.py  wps_xsubset_bbox_dataset.py  wpsio.py
tests/: __init__.py  _common.py  _utils.py  common.py  conftest.py  locustfile.py  test.cfg  test_client.py  test_data.yml  test_locales.py  test_utils.py  test_wps_bccaqv2_heatwave.py  test_wps_bccaqv2_subset.py  test_wps_caps.py  test_wps_ensemble.py  test_wps_geoseries_to_netcdf.py  test_wps_hello.py  test_wps_hourly_to_daily.py  test_wps_sdba.py  test_wps_subset_polygon.py  test_wps_subsetbbox.py  test_wps_xaverage_polygon.py  test_wps_xclim_indices.py  test_wps_xsubset_bbox.py  test_wps_xsubset_point.py  test_wps_xsubset_polygon.py  test_wps_xsubsetpoint.py  utils.py
tests/data/: cordex_subset.nc  geomet.geojson
tests/data/bccaqv2_single_cell/: pr_day_BCCAQv2+ANUSPLIN300_ACCESS1-0_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_ACCESS1-0_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_BNU-ESM_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_BNU-ESM_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CCSM4_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CCSM4_historical+rcp26_r2i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CCSM4_historical+rcp45_r2i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CCSM4_historical+rcp85_r2i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CESM1-CAM5_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CESM1-CAM5_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CNRM-CM5_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CNRM-CM5_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CSIRO-Mk3-6-0_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CSIRO-Mk3-6-0_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CSIRO-Mk3-6-0_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_CanESM2_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_FGOALS-g2_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_FGOALS-g2_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-CM3_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-CM3_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-CM3_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-ESM2G_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-ESM2G_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-ESM2G_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-ESM2M_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_GFDL-ESM2M_historical+rcp85_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_HadGEM2-AO_historical+rcp26_r1i1p1_19500101-21001231_sub.nc  pr_day_BCCAQv2+ANUSPLIN300_HadGEM2-AO_historical+rcp45_r1i1p1_19500101-21001231_sub.nc  (+163 more)
(+111 files in other folders)
