[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "birdhouse-finch"
authors = [
  {name = "David Huard", email = "huard.david@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"},
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["wps", "pywps", "birdhouse", "finch"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["description", "version"]
dependencies = [
  "anyascii >=0.3.0",
  "cf-xarray >=0.9.3",
  "cftime >=1.4.1",
  "click >=8.1.7",
  "clisops >=0.16.2",
  "dask[complete] >=2023.5.1,<2025.4.0",
  "geopandas >=1.0",
  "jinja2 >=3.1.4",
  "netcdf4 <=1.7.2",
  "numcodecs <0.16.0",
  "numpy >=1.25.0",
  "pandas >=2.2.0",
  "parse",
  "psutil >=6.0.0",
  "python-slugify",
  "pywps >=4.6.0",
  "pyyaml >=6.0.1",
  "scipy >=1.9.0",
  "sentry-sdk",
  "siphon",
  "xarray >=2023.11.0,<2025.4.0",
  "xclim ==0.52.2", # remember to match xclim version in environment.yml as well
  "xesmf >=0.6.2,!=0.8.8",
  "xscen ==0.10.0", # remember to match xscen version in environment.yml as well
  "werkzeug>=3.0.6"
]

[project.optional-dependencies]
dev = [
  "birdhouse-birdy>=0.8.1",
  "black >=24.10.0",
  "bump-my-version >=0.29.0",
  "coverage >=7.5.0",
  "cruft >=2.15.0",
  "flake8 >=7.1.0",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.9.0,<4.0",
  "geojson",
  "lxml",
  "matplotlib >=3.5.0",
  "nbconvert",
  "nbsphinx>=0.9.5",
  "nbval >=0.10.0",
  "owslib",
  "pip >=24.2.0",
  "pre-commit >=3.5.0",
  "pylint >=3.3.3",
  "pytest >=8.0.0",
  "pytest-cov >=5.0.0",
  "pytest-flake8",
  "pytest-notebook",
  "ruff >=0.5.7",
  "vulture >=2.14",
  "watchdog >=4.0.0",
]
docs = [
  "birdhouse-birdy>=0.8.1",
  "cf-xarray>=0.9.3",
  "cftime>=1.4.1",
  "ipython>=8.0.0",
  "jupyter_client",
  "matplotlib>=3.5.0",
  "nbsphinx>=0.9.5",
  "sphinx>=7.0.0,<8.2.0", # Pinned until nbsphinx supports Sphinx 8.2
  "sphinxcontrib-bibtex>=2.6.0"
]
prod = [
  "gunicorn>=23.0.0",
  "psycopg2-binary>=2.9.9"
]

[project.scripts]
finch = "finch.cli:cli"

[project.urls]
"Issue tracker" = "https://github.com/bird-house/finch/issues"
"Changelog" = "https://github.com/bird-house/finch/blob/master/changelog.rst"
"Homepage" = "https://github.com/bird-house/finch"

[tool]

[tool.black]
target-version = [
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.13.2"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "src/finch/__version__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "Dockerfile"
search = "Version=\"{current_version}\""
replace = "Version=\"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.coverage.paths]
source = ["src/finch/", "*/site-packages/finch/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["finch"]

[tool.flit.module]
name = "finch"

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment.yml",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/source/_static/*.ico",
  "docs/source/_static/*.svg",
  "docs/source/_static/*.txt",
  "docs/Makefile",
  "docs/source/conf.py",
  "docs/source/**/*.ipynb",
  "docs/source/**/*.rst",
  "src/finch/**/*.cfg",
  "src/finch/**/*.py",
  "src/finch/**/*.yml",
  "tests/*.py",
  "tests/data/**/*.geojson",
  "tests/data/**/*.nc",
  "tests/data/**/*.zip",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".codacy.yml",
  ".dockerignore",
  ".editorconfig",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  "Dockerfile",
  "docker-compose.yml",
  "docs/build",
  "docs/source/apidoc/modules.rst",
  "docs/source/apidoc/finch*.rst",
  "docs/source/notebooks/.ipynb_checkpoints",
  "docs/source/output-santize.cfg",
  "docs/source/references.bib"
]

[tool.isort]
append_only = true
known_first_party = "finch,_common,_utils"
profile = "black"
py_version = 310

[tool.mypy]
files = "."
# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--strict-markers",
  "--tb=native"
]
python_files = ["test_*.py"]
markers = [
  "online: mark test to need internet connection",
  "slow: mark test to be slow"
]

[tool.ruff]
src = ["finch"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/finch/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/finch", "tests"]
sort_by_size = true
