[bumpversion]
current_version = 0.11.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:finch/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docs/source/conf.py]
parse = release|version = "{current_version}"
replace = {new_version}

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[bumpversion:file:.cruft.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[tool:pytest]
addopts = 
	--strict
	--tb=native
python_files = test_*.py
markers = 
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
ignore = F401,E402,E203,W503
max-line-length = 120
exclude = 
	.git
	__pycache__
	docs/source/conf.py
	build
	dist
	src
	tests
rst-directives = 
	bibliography
	autolink-skip
rst-roles = 
	doc
	mod
	py:attr
	py:attribute
	py:class
	py:const
	py:data
	py:func
	py:indicator
	py:meth
	py:mod
	py:obj,
	py:ref
	ref
	cite:cts
	cite:p
	cite:t
	cite:ts
extend-ignore = 
	RST399
	RST201
	RST203
	RST210
	RST301
	RST306

[pycodestyle]
count = False
exclude = docs/source/conf.py
ignore = 
	E226
	E402
	E501
max-line-length = 88
statistics = True

[pydocstyle]
convention = numpy
match = ((?!(test_|conftest|conf|locustfile)).)*\.py

[isort]
profile = black
py_version = 38
append_only = true
